# sp-ml

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
conf/: config.yaml
conf/cv/: nested.yaml  quick.yaml
conf/data/: schurch.yaml
conf/eval/: default.yaml
conf/model/encoder/: identity.yaml
conf/model/graph/: none.yaml
conf/model/pool/: mean.yaml
conf/model/readout/: logreg.yaml
conf/task/: clr_dii.yaml
conf/train/: supervised.yaml
data/: EDA.py  dataset_EDA.py  dataset_parsers.py  preprocessing.py
notebooks/: jupytext.toml
notebooks/EDA/: datasets_overview.ipynb  datasets_overview.py  jacksonfischer2020_basel_eda.py  jacksonfischer2020_full_eda.ipynb  jacksonfischer2020_full_eda.py  jacksonfischer2020_zurich_eda.py  keren2018_eda.py  patwa2021_eda.py  preprocessing_EDA.ipynb  preprocessing_EDA.py  preprocessing_overview.ipynb  preprocessing_overview.py  schurch2020_eda.py  wu2022_charville_eda.ipynb  wu2022_charville_eda.py  wu2022_datasets_overview.ipynb  wu2022_datasets_overview.py  wu2022_preprocessing_overview.ipynb  wu2022_preprocessing_overview.py
notebooks/poc/: bag_of_cells.ipynb  bag_of_cells.py  cv_results.ipynb  cv_results.py
scripts/: poc.sbatch
sp_ml/: __init__.py  configs.py  run.py
sp_ml/data/: EDA.py  __init__.py  crossval.py  datamodule.py  parse_wu2022.py  parsers.py
sp_ml/eval/: __init__.py  panel.py  plots.py  wandb_io.py
sp_ml/models/: __init__.py  encoder.py  graph.py  model.py  pool.py  readout.py
sp_ml/train/: __init__.py  classifier.py  litbase.py
tests/: test_smoke.py
